<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.activities.CreateAccountActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            android:layout_marginBottom="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:orientation="vertical">



                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:layout_marginTop="@dimen/_24sdp"
                    app:fontFamily="@font/poppins_bold"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>



                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helper_create_account"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    style="@style/PlaceHolderTextInput"
                    android:layout_marginTop="@dimen/_36sdp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputLayoutStyle"
                    android:id="@+id/inputLayoutName"
                    app:startIconDrawable="@drawable/ic_round_person_24"
                    android:layout_marginTop="@dimen/_4sdp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/EditTextStyle"
                        android:id="@+id/editName"
                        android:inputType="textPersonName"
                        android:hint="@string/dummy_name"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    style="@style/PlaceHolderTextInput"
                    android:layout_marginTop="@dimen/_12sdp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputLayoutStyle"
                    android:id="@+id/inputLayoutEmail"
                    app:startIconDrawable="@drawable/ic_envelope_outlined"
                    android:layout_marginTop="@dimen/_4sdp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/EditTextStyle"
                        android:id="@+id/editEmail"
                        android:inputType="textEmailAddress"
                        android:hint="@string/dummy_email"/>
                </com.google.android.material.textfield.TextInputLayout>




                <!--Password-->

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    style="@style/PlaceHolderTextInput"
                    android:layout_marginTop="@dimen/_12sdp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputLayoutStyle"
                    app:endIconMode="password_toggle"
                    android:id="@+id/inputLayoutPassword"
                    app:startIconDrawable="@drawable/ic_lock"
                    android:layout_marginTop="@dimen/_4sdp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/EditTextStyle"
                        android:id="@+id/editPassword"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_password"/>
                </com.google.android.material.textfield.TextInputLayout>





                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:id="@+id/btnCreateAccount"
                    android:layout_height="@dimen/height_button_primary"
                    app:cornerRadius="@dimen/corner_radius_btn_primary"
                    android:text="@string/create_account"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_36sdp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    android:layout_margin="@dimen/_12sdp"
                    android:layout_gravity="center_horizontal"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_button_primary"
                    android:text="@string/login"
                    app:cornerRadius="@dimen/corner_radius_btn_primary"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="@dimen/_13ssp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>