<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.activities.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@id/btnCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">




                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_48sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:fontFamily="@font/poppins_bold" />


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="Login to continue" />


                <com.google.android.material.textview.MaterialTextView
                    style="@style/PlaceHolderTextInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_36sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@string/email_address" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutEmail"
                    style="@style/InputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    app:startIconDrawable="@drawable/ic_envelope_outlined">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editEmail"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dummy_email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--Password-->

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textPassword"
                    style="@style/PlaceHolderTextInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPassword"
                    style="@style/InputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editPassword"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_button_primary"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/corner_radius_btn_primary" />



                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account?"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_gravity="center_horizontal"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_button_primary"
                    android:layout_margin="@dimen/_12sdp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_13ssp"
                    app:cornerRadius="@dimen/corner_radius_btn_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />



            </LinearLayout>

        </androidx.core.widget.NestedScrollView>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>